<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                tools:text="@string/got_titletext" />

            <TextView
                android:id="@+id/card_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="4"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/textSecondary"
                android:textSize="14sp"
                tools:text="@string/got_subtext" />
        </LinearLayout>

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginRight="16dp"
            android:src="#16000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/card_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="4"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/textPrimary"
        android:textSize="14sp"
        tools:text="@string/got_summarytext" />

</LinearLayout>

