<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2017 Harish Sridharan


Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_sharp_card"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/card_image"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_gravity="center"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/textPrimaryGrid"
        android:textSize="14sp"
        tools:text="@string/on7_titletext" />

    <TextView
        android:id="@+id/card_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/textSecondaryGrid"
        android:textSize="14sp"
        tools:text="@string/on7_subtext" />

    <TextView
        android:id="@+id/card_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="4"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/textTertiaryGrid"
        android:textSize="14sp"
        tools:text="@string/on7_summarytext" />

</LinearLayout>