<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2017 Harish Sridharan


Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="4dp"
    android:background="@drawable/bg_card"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                tools:text="@string/got_titletext" />

            <TextView
                android:id="@+id/card_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="4"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/textSecondary"
                android:textSize="14sp"
                tools:text="@string/got_subtext" />

        </LinearLayout>

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginRight="16dp"
            android:src="#16000000" />

    </LinearLayout>

    <TextView
        android:id="@+id/card_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="4"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/textPrimary"
        android:textSize="14sp"
        tools:text="@string/got_summarytext" />

</LinearLayout>

